# transformer

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  .zappr.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  MAINTAINERS  Makefile  Makefile.ci  Makefile.local  Pipfile  README.md  README.rst  SECURITY.md  common.mk  delivery.yaml  make_dev_release.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  update-version.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: merge.yml  pr.yml  pypi.yml  test.yml
docs/: Changelog.rst  Contributing.rst  Contributors.rst  Creating-HAR-files.rst  Hierarchical-scenarios.rst  Ignoring-urls.rst  Specifying-weights.rst  Using-plugins.rst  Versioning.rst  Writing-plugins.rst  conf.py  dev.rst  index.rst
examples/: www.google.com.har
functional-tests/: Makefile  README.md  run.py  test-version.py  test_examples.py  test_version.py
tests/: conftest.py
tests/functional/: Makefile  test_examples.py  test_version.py
tests/plugins/: test_contracts.py  test_dummy.py  test_resolve.py  test_sanitize_headers.py
tests/transformer/: test_blacklist.py  test_cli.py  test_denylist.py  test_locust.py  test_naming.py  test_python.py  test_scenario.py  test_task.py  test_transform.py
transformer/: .ignore_example  .urlignore_example  __init__.py  __main__.py  __version__.py  _version.py  blacklist.py  builders_decision.py  builders_python.py  cli.py  conftest.py  decision.py  denylist.py  dummy_plugin.py  helpers.py  locust.py  naming.py  python.py  request.py  scenario.py  task.py  test_blacklist.py  test_cli.py  test_decision.py  test_helpers.py  test_locust.py  test_plugins.py  test_python.py  test_request.py  test_scenario.py  test_task.py  test_transform.py  transform.py
transformer/plugins/: README.md  __init__.py  contracts.py  dummy.py  resolve.py  sanitize_headers.md  sanitize_headers.py  test_contracts.py  test_dummy.py  test_resolve.py  test_sanitize_headers.py
