[tool.poetry]
name = "transformer"
version = "0.1.0"
description = "A tool to convert HAR files into a locustfile."
authors = [
    "Serhii Cherniavskyi <serhii.cherniavskyi@zalando.de>",
    "Thibaut Le Page <thibaut.le.page@zalando.de>",
    "Brian Maher <brian.maher@zalando.de>",
    "Oliwia Zaremba <oliwia.zaremba@zalando.de>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pendulum = "^2.0"
chevron = "^0.13.1"

[tool.poetry.dev-dependencies]
greenlet = "^0.4.15"
locustio = "^0.9.0"
pylint = "^2.2"
pytest = "^3.9"
pytest-cov = "*"
hypothesis = "^4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
