[tool.poetry]
name = "har-transformer"
version = "1.2.4"
description = "A tool to convert HAR files into a locustfile."
authors = [
    "Serhii Cherniavskyi <serhii.cherniavskyi@zalando.de>",
    "Thibaut Le Page <thibaut.le.page@zalando.de>",
    "Brian Maher <brian.maher@zalando.de>",
    "Oliwia Zaremba <oliwia.zaremba@zalando.de>"
]
license = "MIT"
readme = "README.rst"
homepage = "https://transformer.readthedocs.io/"
repository = "https://github.com/zalando-incubator/transformer"
keywords = ["load testing", "locust", "har"]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing :: Traffic Generation",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Internet :: WWW/HTTP",
]
packages = [{ include = "transformer" }]

[tool.poetry.scripts]
transformer = "transformer.cli:script_entrypoint"

[tool.poetry.dependencies]
python = "^3.6"
pendulum = "^2.0"
chevron = "^0.13"
docopt = "^0.6.2"
ecological = "^1.6"
dataclasses = "^0.6.0"

sphinx = { version = "^1.8", optional = true }
sphinx-autodoc-typehints = { version = "^1.6", optional = true }
sphinx-issues = { version = "^1.2", optional = true }
requests = "^2.21"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-autodoc-typehints", "sphinx-issues"]

[tool.poetry.dev-dependencies]
locustio = "^0.9.0"
pytest = "^3.9"
pytest-cov = "*"
pytest-mock = "^1.10"
hypothesis = "^4.4"
black = {version = "*",allows-prereleases = true}
flake8 = "^3.7"
flake8-bugbear = "^18.8"
flake8-docstrings = "^1.3"
flake8-tidy-imports = "^2.0"
tomlkit = "^0.5.3"
readme_renderer = "^24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
